--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "agentkeepalive": "^3.5.1",
+    "body": "^5.1.0",
     "cheerio": "^1.0.0-rc.2",
+    "form-data": "^2.3.2",
     "jsonfile": "^4.0.0",
     "keep-alive-agent": "0.0.1",
     "readline-sync": "^1.4.9",
+    "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
+    "stream-length": "^1.0.2",
     "sync-request": "^6.0.0"
   }
 }
