--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "agentkeepalive": "^3.5.1",
+    "bible-passage-reference-parser": "^2.0.1",
     "bible-references": "^3.0.1",
     "body": "^5.1.0",
     "chapter-and-verse": "^3.0.2",
