--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body": "^5.1.0",
     "chapter-and-verse": "^3.0.2",
     "cheerio": "^1.0.0-rc.2",
+    "colors": "^1.3.2",
     "form-data": "^2.3.2",
     "jsonfile": "^4.0.0",
     "keep-alive-agent": "0.0.1",
